--- a/src/ResortArenaPalace/ManagerLogin.fxml
+++ b/src/ResortArenaPalace/ManagerLogin.fxml
@@ -1,54 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.ManagerLogin">
-  <Label fx:id="lbl_ManagerLog" layoutX="320.0" layoutY="52.0" text="Manager Login">
+   <ImageView fitHeight="600.0" fitWidth="1000.0" opacity="0.37" pickOnBounds="true">
+         <Image url="@Login_PalmTree.jpg" />
+   </ImageView>
+   <AnchorPane layoutX="228.0" layoutY="146.0" opacity="0.91" prefHeight="353.0" prefWidth="563.0" style="-fx-background-color: white;">
+       <Label fx:id="lbl_MUName" layoutX="95.0" layoutY="98.0" text="User name">
+            <font>
+               <Font size="24.0" />
+            </font>
+       </Label>
+       <PasswordField fx:id="passfld_MUPassword" layoutX="281.0" layoutY="210.0" promptText="enter password" />
+       <TextField fx:id="txtField_MUName" layoutX="281.0" layoutY="100.0" promptText="enter user name" />
+       <Label fx:id="lbl_MUPassword" layoutX="102.0" layoutY="214.0" text="Password">
+            <font>
+               <Font size="24.0" />
+            </font>
+       </Label>
+   </AnchorPane>
+  <Label fx:id="lbl_ManagerLog" layoutX="389.0" layoutY="60.0" text="Manager Login">
     <font>
-      <Font size="24.0" />
+      <Font name="Bookshelf Symbol 7" size="37.0" />
     </font>
   </Label>
-  <GridPane layoutX="-2.0" layoutY="93.0" prefHeight="407.0" prefWidth="807.0">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="402.0" minWidth="10.0" prefWidth="402.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="419.0" minWidth="10.0" prefWidth="405.0" />
-    </columnConstraints>
-    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <Label fx:id="lbl_MUName" text="User name">
-      <GridPane.margin>
-        <Insets left="320.0" />
-      </GridPane.margin>
-    </Label>
-    <TextField fx:id="txtField_MUName" promptText="enter user name" GridPane.columnIndex="1">
-      <GridPane.margin>
-        <Insets right="150.0" />
-      </GridPane.margin>
-    </TextField>
-    <Label fx:id="lbl_MUPassword" text="Password" GridPane.rowIndex="1">
-      <GridPane.margin>
-        <Insets left="330.0" />
-      </GridPane.margin>
-    </Label>
-    <PasswordField fx:id="passfld_MUPassword" promptText="enter password" GridPane.columnIndex="1" GridPane.rowIndex="1">
-      <GridPane.margin>
-        <Insets right="150.0" />
-      </GridPane.margin>
-    </PasswordField>
-    <Button fx:id="btn_ManagerSignIn" mnemonicParsing="false" onAction="#changeManToReport" text="Sign In" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-  </GridPane>
+ <Button fx:id="btn_ManagerSignIn" layoutX="520.0" layoutY="508.0" mnemonicParsing="false" onAction="#changeManToReport" prefHeight="31.0" prefWidth="166.0" text="Sign In" />
+   <Button fx:id="btn_GbackManTOHome" layoutX="326.0" layoutY="508.0" mnemonicParsing="false" onAction="#changeManToHome" prefHeight="31.0" prefWidth="166.0" text="Go Back" />
   <stylesheets>
     <URL value="@ArenaStyle.css" />
   </stylesheets>
