--- a/src/ResortArenaPalace/RoomAvailability.fxml
+++ b/src/ResortArenaPalace/RoomAvailability.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,10 +15,13 @@
   <ImageView fitHeight="650.0" fitWidth="1500.0" layoutY="-13.0" opacity="0.21" pickOnBounds="true">
     <Image url="@Login_PalmTree.jpg" />
   </ImageView>
-  <Label layoutX="357" layoutY="13.0" text="Room Availability" textFill="#14d0c7">
+  <Label layoutX="357" layoutY="13.0" text="Room Availability" textFill="#2a88c3">
     <font>
       <Font name="Monotype Corsiva" size="32.0" />
     </font>
+      <effect>
+         <InnerShadow color="#29dcdc" height="1.23" radius="0.0" width="0.0" />
+      </effect>
   </Label>
   <AnchorPane fx:id="room1" layoutX="327.0" layoutY="66.0" prefHeight="172.0" prefWidth="220.0" AnchorPane.bottomAnchor="294.0" AnchorPane.leftAnchor="327.0" AnchorPane.rightAnchor="273.0" AnchorPane.topAnchor="66.0">
     <TextFlow layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="200.0" />
@@ -29,15 +33,18 @@
    <TextArea fx:id="r1Details" editable="false" layoutX="21.0" layoutY="-5.0" prefHeight="111.0" prefWidth="301.0" text="-&#9;165 square meter&#10;-&#9;Pool and garden views&#10;-&#9;Two adults &#10;-&#9;Master bedroom and bathroom&#10;-&#9;Master bathroom with a Jacuzzi&#10;-&#9;Wi-Fi, a 42 inch and 32 inch interactive HD TVs" wrapText="true">
      <Font name="Book Antiqua" size="13.0" />
    </TextArea>
-      <Label layoutX="370.0" layoutY="147.0" prefHeight="27.0" prefWidth="72.0" text="\$50,000" textFill="#14d0c7">
+      <Label layoutX="370.0" layoutY="147.0" prefHeight="27.0" prefWidth="72.0" text="\$50,000" textFill="#2a88c3">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font></Label>
   </AnchorPane>
-  <Label id="room1" fx:id="room" layoutX="115.0" layoutY="39.0" text="Luxury One Bedroom Suite" textFill="#14d0c7">
+  <Label id="room1" fx:id="room" layoutX="115.0" layoutY="39.0" text="Luxury One Bedroom Suite" textFill="#2a88c3">
     <font>
       <Font name="System Bold Italic" size="14.0" />
     </font>
+      <effect>
+         <InnerShadow color="#34dfe5" height="1.23" radius="0.0" width="0.0" />
+      </effect>
   </Label>
   <Button fx:id="btn_Select1rm" layoutX="679.0" layoutY="110.0" mnemonicParsing="false" onAction="#changeR1toPay" text="Select Room" textFill="#8a23c2" />
   <Button fx:id="btn_GoHomeRA" layoutX="30.0" layoutY="19.0" mnemonicParsing="false" onAction="#changeRAToHome" text="Go Home" />
@@ -69,35 +76,44 @@
          <Image url="@../ResortPictures/Grand_room.jpg" />
       </image>
    </ImageView>
- <Label fx:id="room2" layoutX="116.0" layoutY="179.0" prefHeight="27.0" prefWidth="143.0" text="Underwater Suite" textFill="#14d0c7">
+ <Label fx:id="room2" layoutX="116.0" layoutY="179.0" prefHeight="27.0" prefWidth="143.0" text="Underwater Suite" textFill="#2a88c3">
    <font>
      <Font name="System Bold Italic" size="14.0" />
    </font>
+      <effect>
+         <InnerShadow color="#23f7fa" height="1.23" radius="0.0" width="0.0" />
+      </effect>
  </Label>
- <Label fx:id="room3" layoutX="115.0" layoutY="339.0" text="Superior Double Queen Room" textFill="#14d0c7">
+ <Label fx:id="room3" layoutX="115.0" layoutY="339.0" text="Superior Double Queen Room" textFill="#2a88c3">
    <font>
      <Font name="System Bold Italic" size="14.0" />
    </font>
+      <effect>
+         <InnerShadow color="#2ac7d6" height="1.23" radius="0.0" width="0.0" />
+      </effect>
  </Label>
- <Label fx:id="room4" layoutX="115.0" layoutY="471.0" text="Grand Arena Suite" textFill="#14d0c7">
+ <Label fx:id="room4" layoutX="115.0" layoutY="471.0" text="Grand Arena Suite" textFill="#2a88c3">
    <font>
      <Font name="System Bold Italic" size="14.0" />
    </font>
+      <effect>
+         <InnerShadow color="#2aeeee" height="1.23" radius="0.0" width="0.0" />
+      </effect>
  </Label>
  <TextArea fx:id="r3Details" editable="false" layoutX="346.0" layoutY="339.0" prefHeight="111.0" prefWidth="308.0" text="-&#9;410 square meters&#10;-&#9;Ocean view &#10;-&#9;Seating on a private balcony&#10;-&#9;4 adults or 2 adults and 2 children&#10;-&#9;2 queen beds&#10;-&#9;Bath tub and rain shower&#10;-&#9;Complimentary turndown&#10;-&#9;Wi-Fi, 55 inch interactive LED TV" wrapText="true">
    <font>
      <Font name="Book Antiqua" size="13.0" />
    </font>
  </TextArea>
-   <Label layoutX="695.0" layoutY="79.0" prefHeight="27.0" prefWidth="72.0" text="\$12,789" textFill="#14d0c7">
+   <Label layoutX="695.0" layoutY="79.0" prefHeight="27.0" prefWidth="72.0" text="\$12,789" textFill="#2b88c2">
       <font>
          <Font name="System Bold Italic" size="12.0" />
       </font></Label>
-   <Label layoutX="695.0" layoutY="335.0" prefHeight="27.0" prefWidth="72.0" text="\$80,000" textFill="#14d0c7">
+   <Label layoutX="695.0" layoutY="335.0" prefHeight="27.0" prefWidth="72.0" text="\$80,000" textFill="#2a88c3">
       <font>
          <Font name="System Bold Italic" size="12.0" />
       </font></Label>
-   <Label layoutX="696.0" layoutY="477.0" prefHeight="27.0" prefWidth="72.0" text="\$102,00" textFill="#14d0c7">
+   <Label layoutX="696.0" layoutY="477.0" prefHeight="27.0" prefWidth="72.0" text="\$102,00" textFill="#2a88c3">
       <font>
          <Font name="System Bold Italic" size="12.0" />
       </font></Label>
