--- a/src/ResortArenaPalace/LandingPage.fxml
+++ b/src/ResortArenaPalace/LandingPage.fxml
@@ -3,13 +3,13 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.Controller">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.Controller">
   <Tab fx:id="tab_home" text="Home Page">
     <AnchorPane prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: white;">
       <ImageView fitHeight="575.0" fitWidth="1000.0" layoutY="-13.0" opacity="0.13" pickOnBounds="true">
@@ -47,32 +47,18 @@
   </Tab>
   <Tab fx:id="tab_wellness" text="Wellness">
     <AnchorPane fx:id="wellnessLabel" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-      <Label fx:id="wellLabel" layoutX="307.0" prefHeight="68.0" prefWidth="163.0" text="Wellness" textAlignment="CENTER" textFill="#15d4a1" AnchorPane.topAnchor="0.0">
+      <Label fx:id="wellLabel" layoutX="283.0" prefHeight="68.0" prefWidth="306.0" text="Wellness &amp; Spa" textAlignment="CENTER" textFill="#15d4a1" AnchorPane.topAnchor="0.0">
         <font>
           <Font name="Monotype Corsiva" size="47.0" />
         </font>
       </Label>
-      <Button fx:id="ygaBtn" layoutX="74.0" layoutY="236.0" mnemonicParsing="false" text="Yoga" textFill="#13b4e1">
-        <font>
-          <Font name="Monotype Corsiva" size="18.0" />
-        </font></Button>
-      <Button fx:id="gymBtn" layoutX="362.0" layoutY="415.0" mnemonicParsing="false" text="Gym" textAlignment="CENTER" textFill="#13b4e1">
-        <font>
-          <Font name="Monotype Corsiva" size="18.0" />
-        </font></Button>
-      <Button fx:id="spaBtn" layoutX="644.0" layoutY="228.0" mnemonicParsing="false" text="Spa" textAlignment="CENTER" textFill="#13b4e1">
-        <font>
-          <Font name="Monotype Corsiva" size="18.0" />
-        </font></Button>
-      <ImageView fx:id="yogaPic" fitHeight="151.0" fitWidth="246.0" layoutX="8.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../ResortPictures/yoga.jpg" />
-      </ImageView>
-      <ImageView fx:id="gymPic" fitHeight="279.0" fitWidth="292.0" layoutX="243.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="gymPic" fitHeight="279.0" fitWidth="242.0" layoutX="493.0" layoutY="389.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../ResortPictures/gym.jpg" />
       </ImageView>
-      <ImageView fitHeight="194.0" fitWidth="247.0" layoutX="531.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="145.0" fitWidth="236.0" layoutX="32.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../ResortPictures/spa.jpg" />
       </ImageView>
+         <TextArea layoutX="22.0" layoutY="245.0" prefHeight="212.0" prefWidth="279.0" text="Wellness Lectures                             $120&#10;Nutrition                                           $250&#10;Cosmetic Procedures                        $170&#10;Cyrotherapies                                   $230&#10;Energy Healing                                 $370&#10;Emotional Health                              $270&#10;Life Startegy Coaching                      $500&#10;Back &amp; Shoulder Massage                $270&#10;Neck &amp; Face Massage                       $170&#10;Reflexology                                        $285&#10;Well Being Massage                           $300&#10;Deep Tissue Massage                         $485&#10;" />
     </AnchorPane>
   </Tab>
   <Tab fx:id="tab_events" text="Events">
