--- a/src/ResortArenaPalace/LandingPage.fxml
+++ b/src/ResortArenaPalace/LandingPage.fxml
@@ -61,21 +61,17 @@
          <TextArea editable="false" layoutX="22.0" layoutY="228.0" prefHeight="212.0" prefWidth="309.0" text="Wellness Lectures                             $120&#10;Nutrition                                           $250&#10;Cosmetic Procedures                        $170&#10;Cyrotherapies                                   $230&#10;Energy Healing                                 $370&#10;Emotional Health                              $270&#10;Life Startegy Coaching                      $500&#10;Back &amp; Shoulder Massage                $270&#10;Neck &amp; Face Massage                       $170&#10;Reflexology                                        $285&#10;Well Being Massage                           $300&#10;Deep Tissue Massage                         $485&#10;" wrapText="true" />
          <TextArea editable="false" layoutX="607.0" layoutY="75.0" prefHeight="284.0" prefWidth="379.0" text="                         Fitness: 6:00 AM - 8:00 PM&#10;               Thermal Experience: 7:00 AM - 5:00 PM&#10;&#10;Group Fitness: 50 min class every two hours&#10;Yoga: One hour from 7:00 am-9:00 am &amp; 3:00 pm-8:00 pm&#10;Cycling: 50 min class every three hours&#10;Pilates Mat: One hour from 7:00 am-3:00 pm &#10;Flexibility: 10:00 am - 11:30 am &amp; 7:00 pm - 8:00 pm&#10;Boot Camps: 45 min class every two hours &#10;Rock Wall: 50 min class from 12:00 pm - 6:00 pm&#10;Meditation: 6:00 am - 9:00 am&#10;Dance: one hour class from 4:00 pm - 7:00 pm&#10;Aquagym: 45 min class every two hours&#10;&#10;The cardio and the machine are available for use from &#10;5:00 AM to 11:00 PM&#10;&#10;&#10;" wrapText="true" />
          <ImageView fitHeight="150.0" fitWidth="216.0" layoutX="357.0" layoutY="178.0" pickOnBounds="true" preserveRatio="true">
-            <image>
                <Image url="@../ResortPictures/yoga.jpg" />
-            </image></ImageView>
+            </ImageView>
          <TextField layoutX="200.0" layoutY="474.0" prefHeight="72.0" prefWidth="368.0" text="     To reserve a wellness appointment, contact us at: 123 456 789" />
     </AnchorPane>
   </Tab>
   <Tab fx:id="tab_events" text="Events">
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
       <ImageView fitHeight="2500.0" fitWidth="1500.0" layoutX="-122.0" layoutY="-173.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
-        <image>
           <Image url="@Login_PalmTree.jpg" />
-        </image>
       </ImageView>
          <AnchorPane layoutX="129.0" layoutY="32.0" prefHeight="453.0" prefWidth="575.0">
-            <children>
                <TextField layoutX="332.0" layoutY="77.0" prefHeight="25.0" prefWidth="154.0" />
                <Label layoutX="197.0" layoutY="75.0" prefHeight="30.0" prefWidth="116.0" text="First Name" textFill="#2a88c3">
                   <font>
@@ -168,32 +164,21 @@
                   </image>
                </ImageView>
                <ImageView fitHeight="116.0" fitWidth="221.0" layoutX="-58.0" layoutY="195.0" opacity="0.64" pickOnBounds="true" preserveRatio="true">
-                  <image>
                      <Image url="@../ResortPictures/confrence.jpg" />
-                  </image>
                </ImageView>
                <ImageView fitHeight="126.0" fitWidth="199.0" layoutX="-59.0" layoutY="340.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
-                  <image>
                      <Image url="@../ResortPictures/night.jpg" />
-                  </image>
                </ImageView>
                <ComboBox fx:id="cBox_Venue" layoutX="332.0" layoutY="351.0" prefWidth="150.0" />
-            </children>
          </AnchorPane>
          <ImageView fitHeight="132.0" fitWidth="217.0" layoutX="755.0" layoutY="48.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
-            <image>
                <Image url="@../ResortPictures/birthday.jpg" />
-            </image>
          </ImageView>
          <ImageView fitHeight="147.0" fitWidth="200.0" layoutX="749.0" layoutY="205.0" opacity="0.73" pickOnBounds="true" preserveRatio="true">
-            <image>
                <Image url="@../ResortPictures/wedding.jpg" />
-            </image>
          </ImageView>
          <ImageView fitHeight="126.0" fitWidth="199.0" layoutX="755.0" layoutY="364.0" opacity="0.69" pickOnBounds="true" preserveRatio="true">
-            <image>
                <Image url="@../ResortPictures/beach2.jpg" />
-            </image>
          </ImageView>
     </AnchorPane>
   </Tab>
@@ -207,16 +192,16 @@
       <ImageView fx:id="beveragePic" fitHeight="161.0" fitWidth="224.0" layoutX="8.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../ResortPictures/beverage.jpg" />
       </ImageView>
-      <ImageView fx:id="foodPic" fitHeight="185.0" fitWidth="254.0" layoutX="724.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="foodPic" fitHeight="185.0" fitWidth="264.0" layoutX="714.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../ResortPictures/food.jpg" />
       </ImageView>
-      <ImageView fx:id="dessertPic" fitHeight="181.0" fitWidth="248.0" layoutX="348.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="dessertPic" fitHeight="181.0" fitWidth="248.0" layoutX="348.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../ResortPictures/dessert.jpg" />
       </ImageView>
-         <TextArea layoutX="273.0" layoutY="86.0" prefHeight="124.0" prefWidth="391.0" text="Breakfast: 5:00 AM – 11:00 AM&#10;Lunch: 11:00 AM – 5:00 PM&#10;Dinner: 6:00PM – 10:00 PM – Weekends: 6:00PM – 12:00 AM &#10;Weekends Brunch 12pm - 4pm &#10;For further information or for reservations, please call: 237 567 789&#10;" />
+         <TextArea editable="false" layoutX="273.0" layoutY="80.0" prefHeight="114.0" prefWidth="391.0" text="Breakfast: 5:00 AM – 11:00 AM&#10;Lunch: 11:00 AM – 5:00 PM&#10;Dinner: 6:00PM – 10:00 PM – Weekends: 6:00PM – 12:00 AM &#10;Weekends Brunch 12pm - 4pm &#10;For further information or for reservations, please call: 237 567 789&#10;" />
          <TextArea layoutX="14.0" layoutY="263.0" prefHeight="236.0" prefWidth="264.0" text="Cocktails&#10;-&#9;New York&#9;&#9;&#9;        $20&#10;-&#9;Margarita&#9;&#9;&#9;        $25&#10;-&#9;Mojito&#9;&#9;&#9;&#9;$30&#10;-&#9;Manhattan&#9;&#9;&#9;$35&#9;&#10;-&#9;Tropical&#9;&#9;&#9;&#9;$45&#10;Drinks&#10;-&#9;Soda&#9;&#9;&#9;&#9;$5&#10;-&#9;Tropical Juice&#9;&#9;&#9;$15&#10;-&#9;Green Juice&#9;&#9;&#9;$20&#10;-&#9;Iced Tea&#9;&#9;&#9;        $7&#10;-&#9;Fruited Iced Tea&#9;        $17&#10;" />
          <TextArea editable="false" layoutX="332.0" layoutY="217.0" prefHeight="124.0" prefWidth="257.0" text="Fancy Desserts:&#10;    -&#9;Merveilleux                             $25&#10;    -&#9;Délicieux                                 $20&#10;    -&#9;Orange almond cake              $22&#10;    -&#9;New York style cheesecake    $22 &#10;    -&#9;Paris Brest                               $25&#10;-&#9;Mille-Feuille                            $20&#10;" />
-         <TextArea layoutX="716.0" layoutY="281.0" prefHeight="200.0" prefWidth="200.0" />
+         <TextArea editable="false" layoutX="654.0" layoutY="239.0" prefHeight="285.0" prefWidth="332.0" text="Appetizers&#10;-&#9;Spinach Artichoke Dip&#9;&#9;&#9;$5&#10;-&#9;Shrimp &amp; Calamari&#9;&#9;&#9;        $17&#10;-&#9;Stuffed Mushrooms&#9;&#9;&#9;        $9&#10;&#10;Salads &amp; Salads&#10;-&#9;House Salad&#9;&#9;&#9;&#9;        $25&#10;-&#9;Homemade soups&#9;&#9;&#9;        $15&#10;-&#9;Primavera Salad&#9;&#9;&#9;        $18&#10;&#10;Pasta &amp; Dishes &#10;-&#9;Seafood Alfredo&#9;&#9;&#9;        $30&#10;-&#9;Chicken Giardino&#9;&#9;&#9;        $25&#10;-&#9;Primavera&#9;&#9;&#9;&#9;                $23&#10;-&#9;Herbs Salmon&#9;&#9;&#9;&#9;        $27&#10;-&#9;Beef Bolognese &#9;&#9;&#9;&#9;$25&#10;" />
     </AnchorPane>
   </Tab>
   <stylesheets>
