--- a/src/ResortArenaPalace/UserReservationDetails.fxml
+++ b/src/ResortArenaPalace/UserReservationDetails.fxml
@@ -10,8 +10,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.UserReservationDetails">
-   <ImageView fitHeight="1382.0" fitWidth="1325.0" layoutX="-21.0" layoutY="-216.0" opacity="0.13" pickOnBounds="true" preserveRatio="true">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ResortArenaPalace.UserReservationDetails">
+   <ImageView fitHeight="608.0" fitWidth="1000.0" layoutX="3.0" layoutY="-4.0" opacity="0.13" pickOnBounds="true">
       <image>
          <Image url="@Login_PalmTree.jpg" />
       </image>
@@ -24,12 +24,12 @@
          <InnerShadow color="#28eaeb" height="1.23" radius="0.0" width="0.0" />
       </effect>
       </Label>
-      <TextArea fx:id="txtA_ReservationDet" layoutX="240.0" layoutY="126.0" prefHeight="227.0" prefWidth="491.0" text="Order: #000001&#10;&#10;No guests: 2&#10;No rooms: 1&#10;Room type: Luxury.&#10;Check In: 10/24/2019&#10;Check out: 10/28/2019&#10;Payment: Visa &#10;Visa Credit&#9;**** **** **** 2040&#10;Total Payment: 12,789.00">
+      <TextArea fx:id="txtA_ReservationDet" layoutX="240.0" layoutY="126.0" prefHeight="322.0" prefWidth="491.0" text="Order: #106&#10;&#10;&#10;First Name: Emma&#10;Last Name: Jones&#10;No guests: 9&#10;No rooms: 3&#10;Room type: Luxury.&#10;Check In: 12/01/2019&#10;Check out: 01/01/2020&#10;Payment: Visa &#10;Visa Credit&#9;**** **** **** 2040&#10;Total Payment: 12,789.00">
       <effect>
          <InnerShadow />
       </effect></TextArea>
-      <Button fx:id="btn_CancelR" layoutX="506.0" layoutY="378.0" mnemonicParsing="false" text="Cancel Reservation" />
-      <Button fx:id="btn_SignOut" layoutX="355.0" layoutY="383.0" mnemonicParsing="false" onAction="#changeResDetToHome" text="Sign Out" />
+      <Button fx:id="btn_CancelR" layoutX="510.0" layoutY="496.0" mnemonicParsing="false" text="Cancel Reservation" />
+      <Button fx:id="btn_SignOut" layoutX="335.0" layoutY="496.0" mnemonicParsing="false" onAction="#changeResDetToHome" prefHeight="31.0" prefWidth="155.0" text="Sign Out" />
   <stylesheets>
     <URL value="@ArenaStyle.css" />
   </stylesheets>
